--- a/_core/scss/base/_body.scss
+++ b/_core/scss/base/_body.scss
@@ -4,3 +4,7 @@
 ::-moz-selection {
 	background:$select; /* Firefox */
 }
+
+body {
+background-image: linear-gradient(-180deg, #FFFCF5 12%, #F4F5F7 51%, #F2F0F8 83%);
+}
