--- a/_core/css/style.css
+++ b/_core/css/style.css
@@ -17,6 +17,8 @@ table { border-collapse: collapse; border-spacing: 0; }
 
 ::-moz-selection { background: #e4e5ec; /* Firefox */ }
 
+body { background-image: linear-gradient(-180deg, #fffcf5 12%, #f4f5f7 51%, #f2f0f8 83%); }
+
 /*!
 Animate.css - http://daneden.me/animate
 Licensed under the MIT license - http://opensource.org/licenses/MIT
@@ -665,17 +667,21 @@ footer li { display: inline-block; padding-right: 20px; padding-left: 20px; font
 footer a { color: inherit; border-bottom: 1px solid #DBBA88; text-decoration: none; }
 footer a:hover { color: #32393B; }
 
-.introduction { background: #FFFCF5; height: 100vh; width: 100%; font-family: "karla", "helvetica", sans-serif; }
+.introduction { background: transparent; height: 1000px; width: 100%; font-family: "karla", "helvetica", sans-serif; }
 .introduction h1 { padding-top: 35%; color: #886F35; }
 
-.work { background: #F4F5F7; height: 100vh; width: 100%; font-family: "karla", "helvetica", sans-serif; }
+.work { background: transparent; height: 1000px; width: 100%; font-family: "karla", "helvetica", sans-serif; }
 .work h1 { color: #ABAFBA; }
 .work strong { color: #38497B !important; }
 
-.contact { background: #F2F0F8; height: 100vh; width: 100%; font-family: "karla", "helvetica", sans-serif; }
-.contact h1 { color: #3A205E; }
-.contact strong { color: #38497B !important; }
+.contact { background: transparent; height: 740px; width: 100%; font-family: "karla", "helvetica", sans-serif; }
+.contact h1, .contact h2 { color: #3A205E; }
+.contact h2 { margin-top: 40px; }
 
 h1 { padding-top: 40%; font-size: 40px; line-height: 1.3; }
+
+h2 { font-weight: 700; font-size: 26px; line-height: 1.3; }
+
+a { color: inherit; text-decoration: none; }
 
 strong { font-weight: 700 !important; }
