--- a/_core/scss/pages/_home.scss
+++ b/_core/scss/pages/_home.scss
@@ -1,6 +1,6 @@
 .introduction {
-	background: #FFFCF5;
-	height: 100vh;
+	background: transparent;
+	height: 1000px;
 	width: 100%;
 	font-family: $sans;
 
@@ -12,8 +12,8 @@
 
 
 .work {
-	background: #F4F5F7;
-	height: 100vh;
+	background: transparent;
+	height: 1000px;
 	width: 100%;
 	font-family: $sans;
 
@@ -26,13 +26,16 @@
 }
 
 .contact {
-	background: #F2F0F8;
-	height: 100vh;
+	background: transparent;
+	height: 740px;
 	width: 100%;
 	font-family: $sans;
 
-		h1 {
+		h1, h2 {
 			color: #3A205E;
+		}
+		h2 {
+			margin-top: 40px;
 		}
 
 }
@@ -44,7 +47,15 @@ h1 {
 	font-size: 40px;
 	line-height: 1.3;
 }
-
+h2 {
+	font-weight: 700;
+	font-size: 26px;
+	line-height: 1.3;
+}
+a {
+	color: inherit;
+	text-decoration: none;
+}
 strong {
 	font-weight: 700 !important;
 }
