--- a/_core/scss/base/_vars.scss
+++ b/_core/scss/base/_vars.scss
@@ -1,5 +1,5 @@
-$sans: "karla", "helvetica",sans-serif;
-$serif: "leitura-news",serif;
+$sans: "futura", "helvetica",sans-serif;
+$sans2: "bebas neue",serif;
 
 $text: #32393B;
 $light-text: #9399A6;
