--- a/_core/scss/pages/_home.scss
+++ b/_core/scss/pages/_home.scss
@@ -63,9 +63,11 @@
 	position: absolute;
 	background-image: url(../imgs/desk.png);
 	background-size: cover;
+	cursor: progress;
 }
 
 .square2 {
+	cursor: wait;
 	width: 240px;
 	height: 240px;
 	left: -10px;
@@ -74,6 +76,7 @@
 	background-image: url(../imgs/road.png);
 	background-size: cover;
 }
+
 
 
 @media (max-width: 900px) {
